# TheRustProgrammingLanguage

./: .gitignore  README.md
02.ProgrammingAGuessingGame/: Cargo.toml
02.ProgrammingAGuessingGame/src/: main.rs
03.CommonProgrammingConcepts/src/: main.rs
04.UnderstandingOwnership/src/: main.rs
05.UsingStructsToStructureRelatedData/: Cargo.toml
05.UsingStructsToStructureRelatedData/src/: main.rs
06.EnumsAndPatternMatching/src/: main.rs
07.ManageingGrowingProjectsWithPackagesCratesAndModules/resturant/src/: front_of_house.rs  lib.rs  main.rs
08.CommonCollections/collections/src/: main.rs
08.CommonCollections/hashmap/src/: main.rs
09.ErrorHandling/guessing-game/: Cargo.toml
09.ErrorHandling/panic/: Cargo.toml
09.ErrorHandling/panic/src/: main.rs
11.WritingAutomatedTests/adder/src/: lib.rs
14.MoreAboutCargoAndCrates/add/: Cargo.toml
14.MoreAboutCargoAndCrates/mycrate/: Cargo.toml
15.SmartPointers/: Cargo.toml
15.SmartPointers/cons-list/: Cargo.toml
15.SmartPointers/drop-example/: Cargo.toml
15.SmartPointers/drop-example/src/: main.rs
15.SmartPointers/mock_messenger/: Cargo.toml
16.FearlessConcurrency/: Cargo.toml
17.ObjectOrientedProgramming/: Cargo.toml
18.PatternsAndMatching/: Cargo.toml
19.AdvancedFeatures/: Cargo.toml
19.AdvancedFeatures/concrete_traits/: Cargo.toml
19.AdvancedFeatures/functions-example/: Cargo.toml
19.AdvancedFeatures/global_variables/: Cargo.toml
19.AdvancedFeatures/macros-example/: Cargo.toml
19.AdvancedFeatures/types-example/: Cargo.toml
20.BuildingAWebServer/: 404.html  Cargo.toml  hello.html
(+48 files in other folders)
